--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "framer-motion": "^7.6.19",
     "js-cookie": "^3.0.1",
     "next": "^13.0.6",
+    "node": "^19.3.0",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "sweetalert2": "^11.6.16"
