--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
-    "formik": "2.2.9",
+    "formik": "^2.2.9",
     "framer-motion": "^7.6.19",
     "js-cookie": "^3.0.1",
     "next": "^13.0.6",
@@ -24,6 +24,7 @@
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "sweetalert2": "^11.6.16"
+    "sweetalert2": "^11.6.16",
+    "yup": "^0.32.11"
   }
 }
